--- a/sobremi.html
+++ b/sobremi.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="./Styles/tarea.css"/>
+    <link rel="stylesheet" href="./Styles/main.css"/>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
