--- a/ListaAplicacionesDeTareas.html
+++ b/ListaAplicacionesDeTareas.html
@@ -13,7 +13,7 @@
     <div class= "contenedor">
         <label for="textbox"></label>
         <input type="text" id="textbox" name="textbox">
-        <button type="button">Enviar</button>
+        <button type="button">Buscar</button>
 
     </div>
     <div class="contenedor-doble">
